--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <form class="space-y-4 md:space-y-6" >
             <div>
                 <label for="name" class="block mb-2 text-base font-semibold text-gray-900 ">Email</label>
-                <input type="" name="name" id="name" class="bg-gray-50 border border-black text-gray-900 sm:text-sm focus:ring-primary-600  block w-full p-2.5" placeholder="" required="">
+                <input type="email" name="name" id="name" class="bg-gray-50 border border-black text-gray-900 sm:text-sm focus:ring-primary-600  block w-full p-2.5" placeholder="" required="">
             </div>
             <div>
                 <label for="name" class="block mb-2 text-base font-semibold text-gray-900 ">Withdrawal Address</label>
