--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,11 @@
                 <input type="" name="name" id="name" class="bg-gray-50 border border-black text-gray-900 sm:text-sm focus:ring-primary-600  block w-full p-2.5" placeholder="" required="">
             </div>
             <div>
-                <label for="name" class="block mb-2 text-base font-semibold text-gray-900 ">Withdrawal Address</label>
+                <label for="name" class="block mb-2 text-base font-semibold text-gray-900 ">Withdrawal/Deposit Address</label>
                 <input type="" name="name" id="name" class="bg-gray-50 border border-black text-gray-900 sm:text-sm focus:ring-primary-600  block w-full p-2.5" placeholder="" required="">
             </div>
             <div>
-                <label for="name" class="block mb-2 text-base font-semibold text-gray-900 ">New Withdrawal Address</label>
+                <label for="name" class="block mb-2 text-base font-semibold text-gray-900 ">New Withdrawal/Deposit Address</label>
                 <input type="" name="name" id="name" class="bg-gray-50 border border-black text-gray-900 sm:text-sm focus:ring-primary-600  block w-full p-2.5" placeholder="" required="">
             </div>
             <div>
